2010-02-02  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/sunc/x86.h (AO_test_and_set_full): Fix
	"xchg" data size (remove "l" suffix).
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_test_and_set_full):
	Ditto.
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_test_and_set_full): Use
	AO_TS_t for oldval.
	* src/atomic_ops/sysdeps/sunc/x86.h
	(AO_compare_double_and_swap_double_full,
	AO_HAVE_compare_double_and_swap_double_full): Comment out (since
	not tested, might be wrong, and tickles a bug in some Sun CC
	versions; besides, __PIC__ macro is never predefined by Sun CC).

2010-01-29  Ivan Maidanski <ivmai@mail.ru>

	* INSTALL: Regenerate (by autoreconf -vif using libtool-2.2.6b,
	automake-1.11.1, autoconf-2.65).
	* Makefile.in: Ditto.
	* aclocal.m4: Ditto.
	* compile: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* missing: Ditto.
	* mkinstalldirs: Ditto.
	* doc/Makefile.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/atomic_ops/Makefile.in: Ditto.
	* src/atomic_ops/sysdeps/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* tests/Makefile.in: Ditto.

2009-12-19  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/ibmc/powerpc.h (AO_lwsync): Redirect to
	AO_sync() if __NO_LWSYNC__ (same as for gcc/powerpc.h).

2009-12-17  Ivan Maidanski <ivmai@mail.ru> (really Emmanuel Stapf)

	* src/atomic_ops.h: Recognize _M_X64 (as an alias for _AMD64_).

2009-12-04  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac, README: Change to version 7.2alpha5.
	* configure: Regenerate.

[7.2alpha4]

2009-12-02  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac, README: Change to version 7.2alpha4.
	* configure: Regenerate.

2009-12-01  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac, README: Change to version 1.3alpha1.
	* configure: Regenerate.

2009-11-21  Ivan Maidanski <ivmai@mail.ru> (really Daniel R. Grayson)

	* configure.ac (AC_CONFIG_COMMANDS): Quote PICFLAG, CC, DEFS
	values.
	* configure: Regenerate.
